# Kengine

./: .gitignore  CMakeLists.txt  Gameplan.txt  README.md  debug.sh  valgrind_suppressions.supp
assets/models/: StarPoint.glb
c_modules/math/: gauss_legendre.c  gauss_legendre.h  mat4.c  mat4.h  mat4d.c  mat4d.h  vec4.c  vec4.h
c_modules/physics/: spatial_hash.c  spatial_hash.h  verlet_solver.c  verlet_solver.h
c_modules/sh/: sh_basis.c  sh_basis.h  sh_eval.c  sh_eval.h  sh_project.c  sh_project.h
cmake/: CompilerFlags.cmake  Dependencies.cmake
include/kengine/app/: engine.hpp
include/kengine/core/: job_system.hpp  service_locator.hpp  types.hpp
include/kengine/ecs/: component.hpp  entity.hpp  registry.hpp
include/kengine/game/: game_entity.hpp
include/kengine/lighting/: spherical_harmonics.hpp
include/kengine/math/: vec4d.hpp
include/kengine/physics/: physics_world.hpp
include/kengine/render/: camera_4d.hpp  frame_graph.hpp  frame_renderer.hpp  pipeline_manager.hpp  post_process.hpp  render_graph.hpp  retro_pipeline.hpp  retro_types.hpp  scene_targets.hpp  texture.hpp
include/kengine/vulkan/: context.hpp  dynamic_renderer.hpp  gpu_image.hpp  pipeline_builder.hpp  pipeline_cache.hpp  shader_module.hpp  swapchain.hpp  vma_allocator.hpp
include/kengine/world/: world.hpp
shaders/: cull.comp
shaders/common/: common.glsl  fullscreen.vert
shaders/lighting/: sh_bake.comp  sh_eval.frag  sh_project.comp
shaders/post/: bloom_blur.comp  bloom_threshold.comp  dof.frag  sharpen.frag  taa.frag  tonemap_present.frag
shaders/retro/: particle_additive.frag  particle_additive.vert  retro_composite.frag  sprite_2d.frag  sprite_2d.vert  sprite_4d.frag  sprite_4d.vert  star_mesh.frag  star_mesh.vert  transition_4d.glsl  vector_glow.frag  vector_glow.vert
src/: main.cpp
src/app/: engine.cpp
src/core/: job_system.cpp  service_locator.cpp
src/ecs/: registry.cpp
src/lighting/: sh_lighting.cpp
src/math/: vec4d.cpp
src/physics/: physics_world.cpp
src/render/: camera_4d.cpp  frame_graph.cpp  frame_renderer.cpp  pipeline_manager.cpp  post_process.cpp  render_graph.cpp  retro_pipeline.cpp  scene_targets.cpp  texture.cpp
src/vulkan/: context.cpp  dynamic_renderer.cpp  gpu_image.cpp  pipeline_builder.cpp  pipeline_cache.cpp  shader_module.cpp  swapchain.cpp  vma_allocator.cpp
src/world/: world.cpp
